resources/10_baseservices/00-vault.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vault-internal
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: master
subsets:
  - addresses:
      - ip: 192.168.1.19
    ports:
      - name: http
        port: 8200
        protocol: TCP
---
# Source: vault/templates/server-headless-service.yaml
# Service for Vault cluster
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: master
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
#  selector:
#    app.kubernetes.io/name: vault
#    app.kubernetes.io/instance: master
#    component: server
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: master
subsets:
  - addresses:
      - ip: 192.168.1.19
    ports:
      - name: http
        port: 8200
        protocol: TCP
---
# Source: vault/templates/server-service.yaml
# Service for Vault cluster
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: master
spec:
  # We want the servers to become available even if they're not ready
  # since this DNS is also used for join operations.
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
#  selector:
#    app.kubernetes.io/name: vault
#    app.kubernetes.io/instance: master
#    component: server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
spec:
  host: vault.wimsey.us
  path: /
  port:
    targetPort: 8200
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vault
  wildcardPolicy: None

#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: vault-data-pv
#spec:
#  accessModes:
#    - ReadWriteMany
#  capacity:
#    storage: 500Gi
#  claimRef:
#    name: vault-data-pvc
#    namespace: vault
#  nfs:
#    path: /mnt/pool0/k8s/vault
#    server: vmnas01.wimsey.us
#  persistentVolumeReclaimPolicy: Retain
#  volumeMode: Filesystem
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: vault-data-pvc
#  namespace: vault
#spec:
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 500Gi
#  volumeMode: Filesystem
#  volumeName: vault-data-pv
#---
## Source: vault/templates/server-config-configmap.yaml
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: vault-config
#  namespace: vault
#  labels:
#    app.kubernetes.io/name: vault
#    app.kubernetes.io/instance: master
#data:
#  extraconfig-from-values.hcl: |-
#    disable_mlock = true
#    ui = true
#
#    listener "tcp" {
#      tls_disable = 1
#      address = "[::]:8200"
#      cluster_address = "[::]:8201"
#    }
#    storage "file" {
#      path = "/vault/data"
#    }
#
#    # Example configuration for using auto-unseal, using Google Cloud KMS. The
#    # GKMS keys must already exist, and the cluster must have a service account
#    # that is authorized to access GCP KMS.
#    #seal "gcpckms" {
#    #   project     = "vault-helm-dev"
#    #   region      = "global"
#    #   key_ring    = "vault-helm-unseal-kr"
#    #   crypto_key  = "vault-helm-unseal-key"
#    #}
#---
## Source: vault/templates/server-statefulset.yaml
## StatefulSet to run the actual vault server cluster.
#apiVersion: apps/v1
#kind: StatefulSet
#metadata:
#  name: vault
#  namespace: vault
#  labels:
#    app.kubernetes.io/name: vault
#    app.kubernetes.io/instance: master
#spec:
#  serviceName: vault-internal
#  podManagementPolicy: Parallel
#  replicas: 1
#  updateStrategy:
#    type: OnDelete
#  selector:
#    matchLabels:
#      app.kubernetes.io/name: vault
#      app.kubernetes.io/instance: master
#      component: server
#  template:
#    metadata:
#      labels:
#        app.kubernetes.io/name: vault
#        app.kubernetes.io/instance: master
#        component: server
#        k8s-app: vault
#    spec:
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchLabels:
#                  app.kubernetes.io/name: vault
#                  app.kubernetes.io/instance: "master"
#                  component: server
#              topologyKey: kubernetes.io/hostname
#
#      terminationGracePeriodSeconds: 10
#      serviceAccountName: vault
#
#      securityContext:
#        runAsNonRoot: true
#        runAsGroup: 1000
#        runAsUser: 100
#        fsGroup: 1000
#      volumes:
#        - name: gsuite-config
#          secret:
#            secretName: vault-gsuite-json
#
#        - name: config
#          configMap:
#            name: vault-config
#
#        - name: home
#          emptyDir: {}
#
#        - name: vault-data
#          persistentVolumeClaim:
#            claimName: vault-data-pvc
#
#      containers:
#        - name: vault
#
#          image: hashicorp/vault:1.9.0
#          imagePullPolicy: IfNotPresent
#          command:
#            - "/bin/sh"
#            - "-ec"
#          args:
#            - |
#              cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;
#              [ -n "${HOST_IP}" ] && sed -Ei "s|HOST_IP|${HOST_IP?}|g" /tmp/storageconfig.hcl;
#              [ -n "${POD_IP}" ] && sed -Ei "s|POD_IP|${POD_IP?}|g" /tmp/storageconfig.hcl;
#              [ -n "${HOSTNAME}" ] && sed -Ei "s|HOSTNAME|${HOSTNAME?}|g" /tmp/storageconfig.hcl;
#              [ -n "${API_ADDR}" ] && sed -Ei "s|API_ADDR|${API_ADDR?}|g" /tmp/storageconfig.hcl;
#              [ -n "${TRANSIT_ADDR}" ] && sed -Ei "s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g" /tmp/storageconfig.hcl;
#              [ -n "${RAFT_ADDR}" ] && sed -Ei "s|RAFT_ADDR|${RAFT_ADDR?}|g" /tmp/storageconfig.hcl;
#              /usr/local/bin/docker-entrypoint.sh vault server -config=/tmp/storageconfig.hcl
#
#          securityContext:
#            allowPrivilegeEscalation: false
#          env:
#            - name: VAULT_SEAL_TYPE
#              value: awskms
#            - name: VAULT_AWSKMS_SEAL_KEY_ID
#              value: alias/vault-unseal-wimsey-us
#            - name: AWS_REGION
#              value: us-east-1
#            - name: AWS_ACCESS_KEY_ID
#              valueFrom:
#                secretKeyRef:
#                  name: vault-aws-kms-key
#                  key: AWS_ACCESS_KEY_ID
#            - name: AWS_SECRET_ACCESS_KEY
#              valueFrom:
#                secretKeyRef:
#                  name: vault-aws-kms-key
#                  key: AWS_SECRET_ACCESS_KEY
#            - name: HOST_IP
#              valueFrom:
#                fieldRef:
#                  fieldPath: status.hostIP
#            - name: POD_IP
#              valueFrom:
#                fieldRef:
#                  fieldPath: status.podIP
#            - name: VAULT_K8S_POD_NAME
#              valueFrom:
#                fieldRef:
#                  fieldPath: metadata.name
#            - name: VAULT_K8S_NAMESPACE
#              valueFrom:
#                fieldRef:
#                  fieldPath: metadata.namespace
#            - name: VAULT_ADDR
#              value: "http://127.0.0.1:8200"
#            - name: VAULT_API_ADDR
#              value: "http://$(POD_IP):8200"
#            - name: SKIP_CHOWN
#              value: "true"
#            - name: SKIP_SETCAP
#              value: "true"
#            - name: HOSTNAME
#              valueFrom:
#                fieldRef:
#                  fieldPath: metadata.name
#            - name: VAULT_CLUSTER_ADDR
#              value: "https://$(HOSTNAME).vault-internal:8201"
#            - name: HOME
#              value: "/home/vault"
#
#
#
#          volumeMounts:
#            - name: vault-data
#              mountPath: /vault/data
#
#            - name: gsuite-config
#              mountPath: /vault/gsuite-config
#
#            - name: config
#              mountPath: /vault/config
#
#            - name: home
#              mountPath: /home/vault
#          ports:
#            - containerPort: 8200
#              name: http
#            - containerPort: 8201
#              name: https-internal
#            - containerPort: 8202
#              name: http-rep
#          readinessProbe:
#            # Check status; unsealed vault servers return 0
#            # The exit code reflects the seal status:
#            #   0 - unsealed
#            #   1 - error
#            #   2 - sealed
#            exec:
#              command: ["/bin/sh", "-ec", "vault status -tls-skip-verify"]
#            failureThreshold: 2
#            initialDelaySeconds: 5
#            periodSeconds: 5
#            successThreshold: 1
#            timeoutSeconds: 3
#          lifecycle:
#            # Vault container doesn't receive SIGTERM from Kubernetes
#            # and after the grace period ends, Kube sends SIGKILL.  This
#            # causes issues with graceful shutdowns such as deregistering itself
#            # from Consul (zombie services).
#            preStop:
#              exec:
#                command: [
#                    "/bin/sh", "-c",
#                  # Adding a sleep here to give the pod eviction a
#                  # chance to propagate, so requests will not be made
#                  # to this pod while it's terminating
#                    "sleep 5 && kill -SIGTERM $(pidof vault)",
#                ]
#
#
#---
## Source: vault/templates/tests/server-test.yaml
#apiVersion: v1
#kind: Pod
#metadata:
#  name: "server-test"
#  namespace: vault
#  annotations:
#    "helm.sh/hook": test
#spec:
#
#  containers:
#    - name: server-test
#      image: hashicorp/vault:1.9.0
#      imagePullPolicy: IfNotPresent
#      env:
#        - name: VAULT_ADDR
#          value: http://vault.vault.svc:8200
#      command:
#        - /bin/sh
#        - -c
#        - |
#          echo "Checking for sealed info in 'vault status' output"
#          ATTEMPTS=10
#          n=0
#          until [ "$n" -ge $ATTEMPTS ]
#          do
#            echo "Attempt" $n...
#            vault status -format yaml | grep -E '^sealed: (true|false)' && break
#            n=$((n+1))
#            sleep 5
#          done
#          if [ $n -ge $ATTEMPTS ]; then
#            echo "timed out looking for sealed info in 'vault status' output"
#            exit 1
#          fi
#
#          exit 0
#
#  restartPolicy: Never
