resources/10_baseservices/k8s-oidc-dash-proxy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8s-oidc-dash-proxy
  namespace: kube-oidc
  labels:
    k8s-app: k8s-oidc-dash-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: k8s-oidc-dash-proxy
  template:
    metadata:
      name: k8s-oidc-dash-proxy
      creationTimestamp: null
      labels:
        k8s-app: k8s-oidc-dash-proxy
    spec:
      containers:
        - name: k8s-oidc-dash-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
          args:
            - --provider=google
            - --email-domain=wimsey.us
            - --upstream=https://kubernetes-dashboard.kube-system.svc.cluster.local
            - --http-address=0.0.0.0:4180
            - --ssl-upstream-insecure-skip-verify
            - --pass-authorization-header

          ports:
            - hostPort: 4180
              containerPort: 4180
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
kind: Service
apiVersion: v1
metadata:
  name: k8s-oidc-dash-proxy
  namespace: kube-oidc
  labels:
    k8s-app: k8s-oidc-dash-proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180
  selector:
    k8s-app: k8s-oidc-dash-proxy
  type: ClusterIP
  sessionAffinity: None


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: k8s-oidc-dash-proxy
  namespace: kube-oidc
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
spec:
  host: k8s.wimsey.us
  path: /
  port:
    targetPort: 4180
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: k8s-oidc-dash-proxy
  wildcardPolicy: None
