resources/10_baseservices/route-dashboard.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
spec:
  host: k8s-token.wimsey.us
  path: /
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: kubernetes-dashboard
  wildcardPolicy: None
